# mark

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  TODOS.md  flake.nix  hk.pkl  justfile  migration.md  mise.toml  vscode-textmate-theme-parity-plan.md
crates/mark-bench/: Cargo.toml
crates/mark-bench/src/: main.rs  process_metrics.rs
crates/mark-cli/: Cargo.toml
crates/mark-cli/src/: args.rs  dispatch.rs  main.rs  pager.rs  preflight.rs  review.rs  syntax.rs
crates/mark-cli/src/pager/: patch.rs  static_diff.rs
crates/mark-cli/src/pager/tests/: patch.rs
crates/mark-cli/src/syntax/: commands.rs  inspect.rs  options.rs  output.rs  table.rs
crates/mark-cli/tests/: streaming_pool.rs  syntax_path.rs  syntax_update.rs
crates/mark-syntax/: Cargo.toml  build.rs
crates/mark-syntax/examples/: bundle-measure.rs  grammar-debug.rs  profile-cold.rs  profile-counters.rs  regex-hot-bench.rs  regex-parse.rs  regex-route-inventory.rs  theme-resolve.rs  tokenize.rs
crates/mark-syntax/src/: compare.rs  engine.rs  highlight.rs  language.rs  lib.rs  paths.rs  storage.rs  tests.rs  types.rs
crates/mark-syntax/src/engine/: cache.rs  checkpoint.rs  closure_parity_tests.rs  counters.rs  grammar.rs  hashing.rs  line.rs  mod.rs  scopes.rs  state.rs  tokenizer.rs
crates/mark-syntax/src/engine/regex/: ast.rs  backtrack.rs  bytecode.rs  captures.rs  dfa.rs  mod.rs  prefilter.rs  scanner.rs  skip_prefix.rs  start_class.rs  translate.rs
crates/mark-syntax/src/grammars/: bundle.rs  catalog.rs  mod.rs  registry.rs
crates/mark-syntax/src/theme/: mod.rs
crates/mark-syntax/tests/: engine_capture_quality.rs  textmate_golden.rs  theme_golden.rs
crates/mark-syntax/tests/fixtures/textmate/: README.md  cases.config.json  cases.toml  divergences.toml
crates/mark-syntax/tests/fixtures/textmate/abap/: basic.abap  basic.golden.jsonl  stress.abap  stress.golden.jsonl
crates/mark-syntax/tests/fixtures/textmate/actionscript-3/: basic.as  basic.golden.jsonl  stress.as  stress.golden.jsonl
crates/mark-syntax/tests/fixtures/textmate/ada/: basic.adb  basic.golden.jsonl  stress.adb  stress.golden.jsonl
crates/mark-syntax/tests/fixtures/textmate/angular-expression/: basic.golden.jsonl  basic.ng  stress.golden.jsonl  stress.ng
crates/mark-syntax/tests/fixtures/textmate/angular-html/: basic.golden.jsonl  basic.html  stress.golden.jsonl  stress.html
crates/mark-syntax/tests/fixtures/textmate/angular-inline-style/: basic.golden.jsonl  basic.ts  stress.golden.jsonl  stress.ts
crates/mark-syntax/tests/fixtures/textmate/angular-inline-template/: basic.golden.jsonl  basic.ts  stress.golden.jsonl  stress.ts
crates/mark-syntax/tests/fixtures/textmate/angular-let-declaration/: basic.golden.jsonl  basic.html  stress.golden.jsonl  stress.html
crates/mark-syntax/tests/fixtures/textmate/angular-template/: basic.golden.jsonl  basic.html  stress.golden.jsonl  stress.html
crates/mark-syntax/tests/fixtures/textmate/angular-template-blocks/: basic.golden.jsonl  basic.html  stress.golden.jsonl  stress.html
crates/mark-syntax/tests/fixtures/textmate/angular-ts/: basic.golden.jsonl  basic.ts  stress.golden.jsonl  stress.ts
crates/mark-tui/: Cargo.toml
crates/mark-tui/src/: annotation.rs  app.rs  editor.rs  event_reader.rs  keymap.rs  lib.rs  live_diff.rs  model.rs  run.rs  runtime.rs  search.rs  selector.rs  static_pager.rs  syntax.rs  terminal_input.rs  theme.rs  toast.rs
crates/mark-tui/src/app/: action.rs  annotation_targets.rs  annotations.rs  choices.rs  context.rs  core.rs  diff_files.rs  diff_load.rs  diff_replace.rs  editor_reload.rs  effect.rs  file_sidebar.rs  filters.rs  help.rs  hunk_focus.rs  init.rs  inline_ranges.rs  input.rs  layout.rs  lifecycle.rs  marks.rs  menu_options.rs  menus.rs  mouse.rs  options.rs  render_state.rs  runner.rs  state.rs  syntax.rs
crates/mark-tui/src/app/context/: loading.rs  trailing.rs
crates/mark-tui/src/app/controllers/: navigation.rs
crates/mark-tui/src/app/diff_load/: cache.rs  prefetch.rs  review.rs
crates/mark-tui/src/app/input/: event_context.rs  layers.rs
crates/mark-tui/src/app/menu_options/: color_scheme.rs
crates/mark-tui/src/app/menu_refs/: branch.rs  commit.rs
crates/mark-tui/src/app/mouse/: annotation_clicks.rs  click.rs  hover.rs  scroll.rs
crates/mark-tui/src/app/navigation/: focus.rs  scroll.rs  wrapping.rs
crates/mark-tui/src/controls/: diff_choice.rs  git_queries.rs  matcher.rs  refs.rs
crates/mark-tui/src/keymap/: bindings.rs  tests.rs
crates/mark-tui/src/render/: annotation_hints.rs  annotations.rs  compositor.rs  diff.rs  headers.rs  menus.rs  mod.rs  selector_menu.rs  sidebar.rs  snapshot.rs  statusline.rs  style.rs  text.rs  toast.rs  viewport_plan.rs
crates/mark-tui/src/render/diff/: content.rs  context.rs  split.rs  unified.rs
crates/mark-tui/src/render/grep/: highlight.rs  target.rs
crates/mark-tui/src/render/headers/: file.rs  fit.rs  hunk.rs
crates/mark-tui/src/render/menus/: annotation_menu.rs  diff.rs  help.rs  options.rs  refs.rs
crates/mark-tui/src/render/statusline/: annotation_target.rs  error_log.rs  filter_bar.rs  header.rs
crates/mark-tui/src/syntax/: inline.rs  lru.rs  queue.rs  runtime.rs  runtime_queue.rs  runtime_results.rs  source.rs  tests.rs  types.rs
crates/mark-tui/src/tests/: annotations.rs  app.rs  diff.rs  input.rs  menus.rs  misc.rs  mod.rs  render.rs  syntax.rs
crates/mark-tui/src/theme/: benchmark.rs  colorscheme.rs  constants.rs  help.rs  palettes.rs
dx-cli/: Cargo.toml
dx-cli/src/: args.rs  config.rs  main.rs  pager.rs  syntax.rs  update.rs
dx-tui/: Cargo.toml
dx-tui/src/: app.rs  controls.rs  keymap.rs  lib.rs  live_diff.rs  run.rs  static_pager.rs  syntax.rs  tests.rs  theme.rs
dx-tui/src/render/: menus.rs  mod.rs  statusline.rs
mark-bench/: Cargo.toml
mark-bench/src/: main.rs
mark-syntax/: Cargo.toml
mark-syntax/src/: highlight.rs  language.rs  lib.rs  paths.rs  storage.rs  tests.rs  tree_sitter_parsers_lock.json  types.rs
mark-syntax/src/queries/commonlisp/: highlights.scm
mark-syntax/src/queries/ocaml/: highlights.scm
(+1722 files in other folders)
