[workspace]
members = [
    "dx-cli",
    "dx-command",
    "dx-core",
    "dx-diff",
    "dx-bench",
    "dx-git",
    "dx-syntax",
    "dx-tui",
]
resolver = "3"

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Fast terminal Git diff review tool."
repository = "https://github.com/phongndo/dx"
keywords = ["diff", "git", "review", "cli", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["use-dev-tty"] }
fff-grep = "0.9.5-nightly.ec57eb0"
memchr = "2.7"
notify = "8"
ratatui = "0.29"
rustix = { version = "0.38.44", default-features = false, features = ["std", "stdio", "termios"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
shlex = "2.0.1"
toml = "1.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time"] }
tree-sitter-highlight = "0.26.9"
tree-sitter-language-pack = "1.9.0-rc.18"
# time 0.3.47 raises MSRV above the workspace Rust 1.85.
time = { version = "=0.3.45", default-features = false, features = ["local-offset", "std"] }
unicode-width = "0.2"

dx-core = { path = "dx-core" }
dx-command = { path = "dx-command" }
dx-diff = { path = "dx-diff" }
dx-git = { path = "dx-git" }
dx-syntax = { path = "dx-syntax" }
dx-tui = { path = "dx-tui" }
