[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.10.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "Fast terminal Git diff review tool."
repository = "https://github.com/phongndo/mark"
keywords = ["diff", "git", "review", "cli", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["use-dev-tty"] }
fff-grep = "0.9.5-nightly.ec57eb0"
memchr = "2.7"
mimalloc = "0.1"
miniz_oxide = "0.9.1"
notify = "8"
num_cpus = "1.17"
ratatui = "0.29"
rayon = "1.10"
rustix = { version = "0.38.44", default-features = false, features = ["std", "stdio", "termios"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "2.0.1"
tempfile = "3"
toml = "1.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time"] }
time = { version = "0.3", default-features = false, features = ["local-offset", "std"] }
unicode-segmentation = "1.13"
unicode-general-category = "1.1"
unicode-script = "0.5"
unicode-width = "0.2"

mark-core = { path = "crates/mark-core" }
mark-command = { path = "crates/mark-command" }
mark-diff = { path = "crates/mark-diff" }
mark-git = { path = "crates/mark-git" }
mark-runtime = { path = "crates/mark-runtime" }
mark-syntax = { path = "crates/mark-syntax" }
mark-tui = { path = "crates/mark-tui" }

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
