[package]
name = "mark-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true
mark-diff.workspace = true
mark-tui.workspace = true
serde.workspace = true
serde_json.workspace = true
