[package]
name = "mark-syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
mark-core.workspace = true
memchr.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
unicode-segmentation.workspace = true

[build-dependencies]
serde_json.workspace = true
toml.workspace = true
