[package]
name = "mark-syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
mark-core.workspace = true
memchr.workspace = true
miniz_oxide.workspace = true
mimalloc = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
unicode-segmentation.workspace = true

[features]
# Benchmark-only allocator trial: swaps the global allocator in the profiling
# examples so allocator cost can be A/B measured against the system default.
alloc-trial = ["dep:mimalloc"]

[build-dependencies]
miniz_oxide.workspace = true
serde_json.workspace = true
toml.workspace = true
