[package]
name = "mark-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
fff-grep.workspace = true
crossterm.workspace = true
mark-core.workspace = true
mark-command.workspace = true
mark-diff.workspace = true
mark-git.workspace = true
mark-syntax.workspace = true
memchr.workspace = true
notify.workspace = true
ratatui.workspace = true
serde.workspace = true
shlex.workspace = true
tempfile.workspace = true
tokio.workspace = true
toml.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true

[target.'cfg(unix)'.dependencies]
rustix.workspace = true
